--- a/frontend/package.json
+++ b/frontend/package.json
@@ -9,8 +9,10 @@
     "@types/jest": "^27.5.2",
     "@types/node": "^16.18.23",
     "@types/react": "^18.0.34",
+    "@types/react-calendar": "^3.9.0",
     "@types/react-dom": "^18.0.11",
     "react": "^18.2.0",
+    "react-calendar": "^4.2.1",
     "react-dom": "^18.2.0",
     "react-router-dom": "^6.10.0",
     "react-scripts": "5.0.1",
