--- a/frontend/package.json
+++ b/frontend/package.json
@@ -11,6 +11,7 @@
     "@types/react": "^18.0.34",
     "@types/react-calendar": "^3.9.0",
     "@types/react-dom": "^18.0.11",
+    "moment": "^2.29.4",
     "react": "^18.2.0",
     "react-calendar": "^4.2.1",
     "react-dom": "^18.2.0",
