--- a/frontend/package.json
+++ b/frontend/package.json
@@ -9,14 +9,13 @@
     "@testing-library/jest-dom": "^5.16.5",
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
+    "@types/google.maps": "^3.52.6",
     "@types/jest": "^27.5.2",
     "@types/node": "^16.18.23",
     "@types/react": "^18.0.34",
     "@types/react-calendar": "^3.9.0",
     "@types/react-dom": "^18.0.11",
-    "moment": "^2.29.4",
     "react": "^18.2.0",
-    "react-calendar": "^4.2.1",
     "react-dom": "^18.2.0",
     "react-icons": "^4.8.0",
     "react-router-dom": "^6.10.0",
@@ -48,5 +47,8 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
+  },
+  "devDependencies": {
+    "dotenv": "^16.0.3"
   }
 }
